fix(pr) Added optional group regex in common detect brand SEMP TCL
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14933,7 +14933,7 @@ Philco:
   model: '$1'
 
 SEMP TCL:
-  regex: '(GO3E|GO5E|5101J)[);/ ]'
+  regex: '(?:GO3E|GO5E|5101J)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:5101J)[);/ ]'
