fix(pr) Added optional group regex in common detect brand Positivo BGH
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14892,7 +14892,7 @@ Multilaser:
 
 # Positivo BGH
 Positivo BGH:
-  regex: '(T1060B|S455|Positivo Twist|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Metal(?: 32GB)?|Max|XL|[2SM]))[);/ ]'
+  regex: '(?:T1060B|S455|Positivo Twist|Twist (?:\(2018\)|2 (?:Fit|Pro)|Mini|Metal(?: 32GB)?|Max|XL|[2SM]))[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'S455[);/ ]'
