Added optional group regex in common detect brand Yu
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12954,7 +12954,7 @@ Yezz:
 
 # Yu
 Yu:
-  regex: '(YU5[05]10[A]?|AO5510)[);/ ]'
+  regex: '(?:YU5[05]10[A]?|AO5510)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'YU5010[A]?[);/ ]'
