fix(pr) Added optional group regex in common detect brand POCO
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12675,7 +12675,7 @@ X-View:
 
 # POCO
 POCO:
-  regex: 'POCO[ _](X2|F2 PRO)[);/ ]'
+  regex: 'POCO[ _](?:X2|F2 PRO)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'POCO X2[);/ ]'
