fix(pr) remove group regex in detect device SEMP TCL L9 Plus
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14936,7 +14936,7 @@ SEMP TCL:
   regex: '(?:GO3E|GO5E|5101J)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: '(?:5101J)[);/ ]'
+    - regex: '5101J[);/ ]'
       model: 'L9 Plus'
     - regex: '(GO3E|GO5E)[);/ ]'
       model: '$1'
