fix(pr) Added optional group regex in detect device Huawei HWV31
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5574,7 +5574,7 @@ Huawei:
       model: 'Mate SE'
     - regex: '(CAZ-(?:AL[01]0|TL[12]0)|CAN-L[01][1-3])[);/ ]'
       model: 'Nova'
-    - regex: '(PIC-(?:[AT]L00|LX9)|HWV31)[);/ ]'
+    - regex: '(?:PIC-(?:[AT]L00|LX9)|HWV31)[);/ ]'
       model: 'Nova 2'
     - regex: 'BAC-(?:L01|TL00)[);/ ]'
       model: 'Nova 2 Plus'
