fix(pr) Added optional group regex in detect device Huawei P30 Pro
Co-authored-by: Stefan Giehl <stefan@matomo.org>

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5644,7 +5644,7 @@ Huawei:
       model: 'P30 Lite'
     - regex: 'MAR-LX[13]A[);/ ]'
       model: 'P30 Lite Dual SIM'
-    - regex: '(VOG-(?:L(?:04|09|29)|TL00|AL10)|HW-02L)[);/ ]'
+    - regex: '(?:VOG-(?:L(?:04|09|29)|TL00|AL10)|HW-02L)[);/ ]'
       model: 'P30 Pro'
     - regex: 'JNY-LX1[);/ ]'
       model: 'P40 Lite'
