--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2325,7 +2325,7 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36A)|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346]A|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[15]A'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[15]A'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
@@ -2404,7 +2404,7 @@ Vivo:
       model: 'X23'
     - regex: 'V18(38|29)[AT][);/ ]'
       model: 'X27'
-    - regex: 'V1836A[);/ ]'
+    - regex: 'V1836[AT][);/ ]'
       model: 'X27 Pro'
     - regex: 'V1938CT[);/ ]'
       model: 'X30'
@@ -2442,7 +2442,7 @@ Vivo:
       model: 'Y71i'
     - regex: 'V1731CA[);/ ]'
       model: 'Y73'
-    - regex: 'V1913A[);/ ]'
+    - regex: 'V1913[AT][);/ ]'
       model: 'Y7s'
     - regex: 'vivo 180([38]|8i)[);/ ]'
       model: 'Y81'
@@ -4052,7 +4052,7 @@ Senseit:
 
 # Sony & Sony Ericsson (combined as they are mixed up)
 Sony:
-  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|([456]0[12]|701)SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1234567]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[12]K|1L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
+  regex: 'Sony(?: ?Ericsson)?|SGP|Xperia|([456]0[12]|701)SO|C1[569]0[45]|C2[01]0[45]|C230[45]|C530[236]|C550[23]|C6[56]0[236]|C6616|C68(?:0[26]|[34]3)|C69(?:0[236]|16|43)|D200[45]|D21(?:0[45]|14)|D22(?:0[236]|12|43)|D230[2356]|D240[36]|D25(?:02|33)|D510[236]|D530[36]|D5316|D5322|D5503|D58[03]3|D65(?:0[23]|43|63)|D66[03458]3|D66[14]6|D6708|E(?:20[0345]3|2006|210[45]|2115|2124|230[36]|2312|23[356]3|530[36]|53[3456]3|5506|55[356]3|56[46305][36]|58[02]3|65[35]3|66[0358]3|68[358]3)|I[34]312|I4332|F311[12356]|F331[13]|F321[12356]|F5[13]21|F5122|F813[12]|F833[12]|G312[135]|G311[26]|G322[136]|G3212|G331[123]|G3412|G3416|G342[136]|G823[12]|G834[123]|G8[14]4[12]|H(?:3113|3123|3133|3213|3223|3311|3321|4113|4133|4213|4233|4311|4331|4413|4433|82[167]6|83[12]4|8416|9436)|(?:WT|LT|SO|ST|SK|MK)[0-9]+[a-z]+[0-9]*(?: Build|\))|X?L39H|XM50[ht]|W960|portalmmm/2\.0 K|S3[69]h|SOL2[246]|SOV3[1234567]|X10[ia]v?|E1[05][ai]v?|MT[0-9]{2}[a-z]? Build|SO-0(?:[12]C|[345]D|[234]E|[1-5]F|[1234]G|[134]H|[1234]J|[124]K|1L)|R800[aix]|J8270|J9110|J9210|J81[17]0|I[34]113|I3[12]23|I42[19]3|H9493|H8296|H8166|H4493|LiveWithWalkman|BRAVIA|SGP771|E3 Dual'
   device: 'smartphone'
   models:
     # SONY ERICSSON: explicit smartphone models
@@ -4377,7 +4377,7 @@ Sony:
       model: 'Xperia XA2 Ultra'
     - regex: '(?:Sony(?:Ericsson)?)?G823[12]|SOV35|602SO|SO-03J'
       model: 'Xperia XZs'
-    - regex: '(?:Sony(?:Ericsson)?)?G814[12]|SO-04J'
+    - regex: '(?:Sony(?:Ericsson)?)?G814[12]|SO-04[JK]'
       model: 'Xperia XZ Premium'
     - regex: '(?:Sony(?:Ericsson)?)?(?:H83[12]4|H82[17]6|SOV37|H8296)'
       model: 'Xperia XZ2'
@@ -5277,7 +5277,7 @@ Hoozo:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|BKK|BKL|BLA|BLL|BLN|BND|BTV|CAG|CAM|CAN|CAZ|CHC|CHE[12]?|CHM|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-L01|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-(AL[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-AN00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a|TAH-AN00m|C8817D|T1-821W'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a[);/ ]'
@@ -5288,11 +5288,11 @@ Huawei:
       model: 'Ascend G300'
     - regex: 'G527-U081[);/ ]'
       model: 'Ascend G527'
-    - regex: 'G620S-L0[13][);/ ]'
+    - regex: '(G620S-L0[13]|C8817D)[);/ ]'
       model: 'Ascend G620S'
     - regex: 'G630-U251[);/ ]'
       model: 'Ascend G630'
-    - regex: 'G7-L01[);/ ]'
+    - regex: 'G7-(?:L01|TL00)[);/ ]'
       model: 'Ascend G7'
     - regex: 'G730-C00[);/ ]'
       model: 'Ascend G730'
@@ -5310,7 +5310,7 @@ Huawei:
       model: 'Enjoy 10 Plus'
     - regex: 'MED-[AT]L00[);/ ]'
       model: 'Enjoy 10E'
-    - regex: 'AQM-AL00[);/ ]'
+    - regex: 'AQM-[AT]L00[);/ ]'
       model: 'Enjoy 10S'
     - regex: 'TAG-[ACT]L00[);/ ]'
       model: 'Enjoy 5S'
@@ -5480,7 +5480,7 @@ Huawei:
       model: 'Honor P10 Plus'
     - regex: 'VOG-AL00[);/ ]'
       model: 'Honor P30 Pro'
-    - regex: 'ANA-AN00[);/ ]'
+    - regex: 'ANA-[AT]N00[);/ ]'
       model: 'Honor P40'
     - regex: 'COR-(?:AL[01]0|L29|TL10)[);/ ]'
       model: 'Honor Play'
@@ -5532,6 +5532,8 @@ Huawei:
       model: 'Maimang 5'
     - regex: 'POT-AL10[);/ ]'
       model: 'Maimang 8'
+    - regex: 'TAH-AN00m[);/ ]'
+      model: 'Mate XS'
     - regex: 'ALP-(?:[TA]L00|L[02]9)[);/ ]'
       model: 'Mate 10'
     - regex: 'RNE-(?:AL00|L(?:01|03|21|23))[);/ ]'
@@ -5598,8 +5600,10 @@ Huawei:
       model: 'Nova 5'
     - regex: 'SEA-AL10[);/ ]'
       model: 'Nova 5 Pro'
-    - regex: 'GLK-[AT]L00'
+    - regex: 'GLK-[AT]L00[);/ ]'
       model: 'Nova 5i'
+    - regex: 'SPN-TL00[);/ ]'
+      model: 'Nova 5i Pro'
     - regex: 'WLZ-AL10[);/ ]'
       model: 'Nova 6'
     - regex: 'WLZ-AN00[);/ ]'
@@ -5769,13 +5773,16 @@ Huawei:
     - regex: 'CMR-(?:AL[01]9|W09)[);/ ]'
       device: 'tablet'
       model: 'MediaPad M5 10.8'
+    - regex: 'CMR-W19[);/ ]'
+      device: 'tablet'
+      model: 'MediaPad M5 Pro 10.8'
     - regex: 'SCM-AL09[);/ ]'
       device: 'tablet'
       model: 'MediaPad M5 Pro'
     - regex: 'GEM-70[1-3]L[);/ ]'
       device: 'tablet'
       model: 'MediaPad X2'
-    - regex: '(?:JDN2-(:?[WL]09|AL00)|BAH2-(?:AL[01]0|L09|W[01]9))[);/ ]'
+    - regex: '(?:JDN2-(:?[WL]09|AL[50]0)|BAH2-(?:AL[01]0|L09|W[01]9))[);/ ]'
       device: 'tablet'
       model: 'MediaPad M5 Lite'  #8.4
     - regex: 'SHT-(?:AL|W)09[);/ ]'
@@ -5808,7 +5815,7 @@ Huawei:
     - regex: 'AGS-(?:L0[39]|W09)[);/ ]'
       device: 'tablet'
       model: 'MediaPad T3 10'
-    - regex: '(KOB-(?:L|W)09|BZK-W00)[);/ ]'
+    - regex: '(KOB-(?:L|W)09|BZK-[LW]00)[);/ ]'
       device: 'tablet'
       model: 'MediaPad T3 8'
     - regex: 'BG2-(?:U0[13]|W09)[);/ ]'
@@ -5832,7 +5839,7 @@ Huawei:
     - regex: 'T1-701u[);/ ]'
       device: 'tablet'
       model: 'MediaPad T1 7'
-    - regex: '(?:T1-823L|MediaPad T1 8.0)[);/ ]'
+    - regex: '(?:T1-82(?:3L|1W)|MediaPad T1 8.0)[);/ ]'
       device: 'tablet'
       model: 'MediaPad T1 8'
     - regex: 'AGS2-AL00[);/ ]'
@@ -7980,7 +7987,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M1813|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -8030,6 +8037,8 @@ Meizu:
       model: 'M1 Metal'
     - regex: 'M1813[);/ ]'
       model: 'M8'
+    - regex: 'M1816[);/ ]'
+      model: 'M8 Lite'
     - regex: 'PRO 6'
       model: 'PRO 6'
     - regex: 'PRO 7-H[);/ ]'
@@ -12685,7 +12694,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)[);/ ]|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-A0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[34]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2002J9E|HM2014819|WT88047|M2004J7[AB]C|M2003J15SC'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)[);/ ]|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-A0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2002J9E|HM2014819|WT88047|M2004J7[AB]C|M2003J15SC'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -12781,7 +12790,7 @@ Xiaomi:
     - regex: 'MIBOX3[ _]Pro[);/ ]'
       model: 'Mi Box 3 Pro'
       device: 'tv'
-    - regex: 'MIBOX([34])[);/ ]'
+    - regex: 'MIBOX([234])[);/ ]'
       model: 'Mi Box $1'
       device: 'tv'
     - regex: 'MiBOX1S[);/ ]'
@@ -14628,7 +14637,7 @@ Huadoo:
 
 # Gome
 Gome:
-  regex: 'GOME[_ ](2018X38A|2016G68A|2017M27A|C7_Note_Plus|U9)[);/ ]'
+  regex: 'GOME[_ ](2018X38A|2016G68A|2017M27A|C7_Note_Plus|U9|S1)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'GOME[_ ](2018X38A)[);/ ]'
@@ -14637,7 +14646,7 @@ Gome:
       model: 'K1'
     - regex: 'GOME[_ ](2017M27A)[);/ ]'
       model: 'U7'
-    - regex: 'GOME[_ ](C7_Note_Plus|U9)[);/ ]'
+    - regex: 'GOME[_ ](C7_Note_Plus|U9|S1)[);/ ]'
       model: '$1'
 
 # Voyo
