--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -9174,3 +9174,23 @@
     model: Cool 9
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 10; V2002A; wv) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.84 Mobile Safari/537.36 VivoBrowser/8.0.10.0
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: vivo Browser
+    short_name: VV
+    version: 8.0.10.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: VV
+    model: Y70s
+  os_family: Android
+  browser_family: Unknown
