--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -9194,3 +9194,23 @@
     model: Y70s
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.1.2; M8SPROW) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/83.0.4103.96 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: 7.1.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 83.0.4103.96
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: 0M
+    model: M8S Pro W
+  os_family: Android
+  browser_family: Chrome
