--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -8291,17 +8291,19 @@ Mobistel:
 
 # Mecool
 Mecool:
-  regex: '(KM9PRO|BB2 PRO|KII PRO|KM9_TV_BOX)[);/ ]'
+  regex: '(?:KM9PRO|BB2 PRO|KII PRO|KM9_TV_BOX|M8SPROW)[);/ ]'
   device: 'tv'
   models:
-    - regex: 'KM9PRO'
+    - regex: 'KM9PRO[);/ ]'
       model: 'KM9 Pro'
-    - regex: 'KM9_TV_BOX'
+    - regex: 'KM9_TV_BOX[);/ ]'
       model: 'KM9 TV Box'
-    - regex: 'BB2 PRO'
+    - regex: 'BB2 PRO[);/ ]'
       model: 'BB2 Pro'
-    - regex: 'KII PRO'
+    - regex: 'KII PRO[);/ ]'
       model: 'KII Pro'
+    - regex: 'M8SPROW[);/ ]'
+      model: 'M8S Pro W'
 
 # Modecom
 Modecom:
