feat(device) detect brand kyocera models: Torque G02 (KYV35), Basio 4 (KYV47-u)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6802,9 +6802,9 @@ K-Touch:
     - regex: 'K-?Touch[ _]([a-z0-9]+)'
       model: '$1'
 
-# kyocera
+# kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|C5120|C5170|C5155|C5215|C6730|C6750|C6522N?|C6530N|C6740|C6743|E6[89]10|KYL21|KYY23|S2151|KC-S701|S4-KC[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:C5120|C5170|C5155|C5215|C6730|C6750|C6522N?|C6530N|C6740|C6743|E6[89]10|KYL21|KYV35|KYY23|S2151|KC-S701|S4-KC|KYV47-u)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -6838,6 +6838,10 @@ Kyocera:
       model: 'Torque'
     - regex: 'KYL21'
       model: 'Digno S'
+    - regex: 'KYV35[;/) ]'
+      model: 'Torque G02'
+    - regex: 'KYV47-u[;/) ]'
+      model: 'Basio 4'
     - regex: 'KYY23'
       model: 'Urbano L03'
     - regex: '(?:Kyocera-)?E6790'
