--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4784,7 +4784,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: 'F-01[FHJK]|F-02[EFGH]|F-03[DEFGH]|F-04[EG]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-11D|F-12C|M532|FARTM933KZ[);/ ]'
+  regex: 'F-01[FHJK]|F-02[EFGH]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-11D|F-12C|M532|FARTM933KZ[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'F-01F'
@@ -4819,6 +4819,8 @@ Fujitsu:
       model: 'Arrows NX F-05F'
     - regex: 'F-05J'
       model: 'Arrows Be F-05J'
+    - regex: 'F-04K'
+      model: 'Arrows Be F-04K'
     - regex: 'F-06E'
       model: 'Arrows NX F-06E'
     - regex: 'F-07D'
@@ -5283,7 +5285,7 @@ Hoozo:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a|TAH-AN00m|C8817D|T1-821W'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a|TAH-AN00m|C8817D|T1-821W'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a[);/ ]'
@@ -6806,7 +6808,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:C5120|C5170|C5155|C5215|C6730|C6750|C6522N?|C6530N|C6740|C6743|E6[89]10|KYL21|KYV35|KYY23|S2151|KC-S701|S4-KC|KYV47-u)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:C5120|C5170|C5155|C5215|C6730|C6750|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL21|KYV35|KYY23|S2151|KC-S701|S4-KC|KYV40U|KYV42|KYV47-u)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -6844,6 +6846,10 @@ Kyocera:
       model: 'Torque G02'
     - regex: 'KYV47-u[;/) ]'
       model: 'Basio 4'
+    - regex: 'KYV42[;/) ]'
+      model: 'Qua Phone QX'
+    - regex: 'KYV40U[;/) ]'
+      model: 'Rafre'
     - regex: 'KYY23'
       model: 'Urbano L03'
     - regex: '(?:Kyocera-)?E6790'
@@ -9798,7 +9804,7 @@ Siemens:
 
 # Samsung
 Samsung:
-  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CH]|04E|01F)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV3[1-9]|404SC'
+  regex: 'SAMSUNG(?! ?Browser)|Maple |SC-(?:02[CH]|04E|01F)|N[57]100|N5110|N9100|S(?:CH|GH|PH|EC|AM|HV|HW|M)-|SMART-TV|GT-|Galaxy|(?:portalmmm|o2imode)/2\.0 [SZ]|sam[rua]|vollo Vi86[);/ ]|(?:OTV-)?SMT-E5015|ISW11SC|SCV4[13]|SCV3[1-9]|404SC'
   device: 'smartphone'
   models:
     # explicit tv models
@@ -10242,7 +10248,7 @@ Samsung:
       model: 'GALAXY S9'
     - regex: '(?:SAMSUNG-)?SM-G965[FNUWX0]|SCV39'
       model: 'GALAXY S9+'
-    - regex: '(?:SAMSUNG-)?SM-G973'
+    - regex: '(?:SAMSUNG-)?(?:SM-G973|SCV41)'
       model: 'GALAXY S10'
     - regex: '(?:SAMSUNG-)?SM-G975[0FUW]'
       model: 'GALAXY S10+'
@@ -10330,7 +10336,7 @@ Samsung:
       model: 'GALAXY A20e'
     - regex: '(?:SAMSUNG-)?SM-A207[FM]'
       model: 'GALAXY A20s'
-    - regex: '(?:SAMSUNG-)?SM-A305(?:FN|GN|GT|YN|[FG])'
+    - regex: '(?:SAMSUNG-)?(?:SM-A305(?:FN|GN|GT|YN|[FG])|SCV43)'
       model: 'GALAXY A30'
     - regex: '(?:SAMSUNG-)?SM-A307(?:FN|GN|GT|[FG])'
       model: 'GALAXY A30s'
@@ -11281,7 +11287,7 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|901SH|AQUOS|305SH|506SH|SHL22|SHV44|SHV35|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|605SH|901SH|305SH|506SH|SHL22|SHV4[34]|SHV35|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11301,22 +11307,24 @@ Sharp:
       model: 'Aquos Phone SH-06D'
     - regex: 'SHL22'
       model: 'Aquos Phone SHL22'
+    - regex: '605SH'
+      model: 'Aquos R'
     - regex: 'SH-M09'
       model: 'Aquos R2'
     - regex: 'SH-C02[);/ ]'
       model: 'Aquos V'
     - regex: '305SH[);/ ]'
       model: 'Aquos Crystal'
-    - regex: 'FS8010|SH-M08'
+    - regex: 'FS8010|SH-M08|SHV43'
       model: 'Aquos S2'
     - regex: 'SHV44[);/ ]'
       model: 'Aquos R3'
     - regex: 'FS8032'
       model: 'Aquos S3'
-    - regex: '901SH[);/ ]'
-      model: 'Aquos Sense 3 Plus'
     - regex: 'FS8018'
       model: 'Aquos S3 Mini'
+    - regex: '901SH[);/ ]'
+      model: 'Aquos S3 Plus'
     - regex: 'SHV35[);/ ]'
       model: 'Aquos U'
     - regex: 'TG-L900S'
