feat(device) detect brand Huawei model: P30 Lite (MAR-LX2J) feat(device) detect brand Freetel model: Rei 2 Dual (FTJ17A00) feat(device) detect brand Sharp model: Aquos R Compact (701SH) feat(device) detect brand Sharp model: Aquos S Basic (702SH)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5656,7 +5656,7 @@ Huawei:
       model: 'P20 Pro'
     - regex: '(ELE-L(?:04|09|29)|ELE-[AT]L00)[);/ ]'
       model: 'P30'
-    - regex: '(?:MAR-(?:LX(?:1[BM]|2|3BM)|TL00)|NIC-LX1A|HWV33)[);/ ]'
+    - regex: '(?:MAR-(?:LX(?:1[BM]|2J?|3BM)|TL00)|NIC-LX1A|HWV33)[);/ ]'
       model: 'P30 Lite'
     - regex: 'MAR-LX[13]A[);/ ]'
       model: 'P30 Lite Dual SIM'
@@ -11307,7 +11307,7 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|605SH|901SH|305SH|506SH|SHL22|SHV4[034]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|605SH|70[12]SH|901SH|305SH|506SH|SHL22|SHV4[034]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11329,6 +11329,8 @@ Sharp:
       model: 'Aquos Phone SHL22'
     - regex: '605SH[);/ ]'
       model: 'Aquos R'
+    - regex: '701SH[);/ ]'
+      model: 'Aquos R Compact'
     - regex: 'SH-M09[);/ ]'
       model: 'Aquos R2'
     - regex: 'SH-C02[);/ ]'
@@ -11337,6 +11339,8 @@ Sharp:
       model: 'Aquos Crystal'
     - regex: 'SHV40[);/ ]'
       model: 'Aquos S'
+    - regex: '702SH[);/ ]'
+      model: 'Aquos S Basic'
     - regex: 'SHV38[);/ ]'
       model: 'Aquos S Mini'
     - regex: '(?:FS8010|SH-M08|SHV43)[);/ ]'
@@ -13512,11 +13516,13 @@ FinePower:
 
 # Freetel
 Freetel:
-  regex: '(FTJ152[ABCD]|FT141B|FT142D_LTEXM|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162D|FTE161[GE])[;)/ ]'
+  regex: '(?:FTJ17A00|FTJ152[ABCD]|FT141B|FT142D_LTEXM|FT142A?|FTJ161[AB]|FTJ1[56]2E|FTJ162D|FTE161[GE])[;)/ ]'
   device: 'smartphone'
   models:
    - regex: 'FTJ152C'
      model: 'Samurai Miyabi'
+   - regex: 'FTJ17A00[;)/ ]'
+     model: 'Rei 2 Dual'
    - regex: 'FTJ161A'
      model: 'Musashi'
    - regex: 'FTE161E'
