feat(device) detect brand LG model: Qua Phone PX (LGV33) feat(device) detect brand LG model: X5 (X5-LG) feat(device) detect brand NEC model: LAVIE Tab E TE508 (PC-TE508HAW) feat(device) detect brand Samsung model: GALAXY A7 (2018) (SM-A750C)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7404,7 +7404,7 @@ Lexibook:
 
 # LG
 LG:
-  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[56]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815'
+  regex: 'LG|portalmmm/2\.0 (?:KE|KG|KP|L3)|(?:VX[0-9]+|L-0[12]D|L-07C|P713|(LM-[A-Z][0-9]{3}[A-Z]{0,3}(?:\(FGN?\)|\(G\)|\.FN|\.F(?:GN?)?)?)|LM-(X625N1|G820QM[0127]))[);/ ]|NetCast|RS98[78]|RS500|VS(?:50[01]|835|876|880|98[0578]|99[56]|(410|415|425|500|880)PP)|Nexsus 5|LML(41[34]D|211B|713D|212V)L|VK810 4G|VK815|X5-LG'
   device: 'smartphone'
   models:
     - regex: 'LG-D325'
@@ -7473,11 +7473,13 @@ LG:
       model: 'Q7'
     - regex: 'LM-(Q725[KL]|Q610.FGN)[);/ ]'
       model: 'Q7+'
-    - regex: 'LM-Q815[SL]'
+    - regex: 'LM-Q815[SL][);/ ]'
       model: 'Q8+'
-    - regex: 'LM-Q925L'
+    - regex: 'LM-Q925L[);/ ]'
       model: 'Q9'
-    - regex: 'VS835'
+    - regex: 'LGV33[);/ ]'
+      model: 'Qua Phone PX'
+    - regex: 'VS835[);/ ]'
       model: 'Stylo 2 V'
     - regex: 'LM-Q710|LML713DL'
       model: 'Stylo 4'
@@ -7517,7 +7519,7 @@ LG:
       model: 'K40'
     - regex: 'LM-X540'
       model: 'K50S'
-    - regex: 'LM-X510[KLS]'
+    - regex: '(?:LM-X510[KLS]|X5-LG)'
       model: 'X5'
     - regex: 'LM-X625N1'
       model: 'X6'
@@ -8674,7 +8676,7 @@ Nobby:
 
 # nec
 NEC:
-  regex: 'NEC[ _\-]|KGT/2\.0|portalmmm/1\.0 (?:DB|N)|(?:portalmmm|o2imode)/2.0[ ,]N'
+  regex: 'NEC[ _\-]|KGT/2\.0|PC-TE508HAW|portalmmm/1\.0 (?:DB|N)|(?:portalmmm|o2imode)/2.0[ ,]N'
   device: 'smartphone'
   models:
     - regex: '(?:NEC[ _\-]|KGT/2\.0 )([a-z0-9]+)'
@@ -8683,6 +8685,9 @@ NEC:
       model: '$1'
     - regex: '(?:portalmmm|o2imode)/2\.0[ ,](N[a-z0-9]+)'
       model: '$1'
+    - regex: 'PC-TE508HAW[;/) ]'
+      device: 'tablet'
+      model: 'LAVIE Tab E TE508'
 
 # Neffos (TP-Link)
 Neffos:
@@ -10328,7 +10333,7 @@ Samsung:
       model: 'GALAXY A7 (2016)'
     - regex: '(?:SAMSUNG-)?SM-A720[FS]'
       model: 'GALAXY A7 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FG])'
+    - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FGC])'
       model: 'GALAXY A7 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A(?:530F|800[0FISY])|SCV32'
       model: 'GALAXY A8'
