feat(device) detect brand Sharp model: Aquos Crystal X (402SH) feat(device) detect brand Sharp model: Aquos R2 (SHV42) feat(device) detect brand Sharp model: Aquos Z2 (SHV47)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4092,6 +4092,7 @@ Sony:
       brand: 'Sony Ericsson'
     - regex: '(?:Sony(?:Ericsson)?)?ST17[ai]'
       model: 'Xperia active'
+      brand: 'Sony Ericsson'
     - regex: '(?:Sony(?:Ericsson)?)?SO-02L'
       model: 'Xperia Ace'
       brand: 'Sony Ericsson'
@@ -11314,7 +11315,7 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|605SH|70[12]SH|901SH|305SH|506SH|SHL22|SHV4[0346]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|402SH|[36]05SH|70[12]SH|901SH|506SH|SHL22|SHV4[023467]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11338,12 +11339,14 @@ Sharp:
       model: 'Aquos R'
     - regex: '701SH[);/ ]'
       model: 'Aquos R Compact'
-    - regex: 'SH-M09[);/ ]'
+    - regex: '(?:SH-M09|SHV42)[);/ ]'
       model: 'Aquos R2'
     - regex: 'SH-C02[);/ ]'
       model: 'Aquos V'
     - regex: '305SH[);/ ]'
       model: 'Aquos Crystal'
+    - regex: '402SH[);/ ]'
+      model: 'Aquos Crystal X'
     - regex: 'SHV40[);/ ]'
       model: 'Aquos S'
     - regex: '702SH[);/ ]'
@@ -11366,7 +11369,7 @@ Sharp:
       model: 'Aquos U'
     - regex: 'TG-L900S[);/ ]'
       model: 'Luna S'
-    - regex: 'FS8002[);/ ]'
+    - regex: '(?:FS8002|SHV47)[);/ ]'
       model: 'Z2'
     - regex: 'FS8009[);/ ]'
       model: 'Z3'
