--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4789,7 +4789,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJK]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
+  regex: '(?:F-01[FHJK]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'F-01F[);/ ]'
@@ -4830,6 +4830,8 @@ Fujitsu:
       model: 'Arrows Be F-04K'
     - regex: 'F-02L[);/ ]'
       model: 'Arrows Be 3 F-02L'
+    - regex: 'F-41A[);/ ]'
+      model: 'Arrows Be 4 F-41A'
     - regex: 'F-06E[);/ ]'
       model: 'Arrows NX F-06E'
     - regex: 'F-07D[);/ ]'
@@ -5297,7 +5299,7 @@ Hoozo:
 
 # Huawei
 Huawei:
-  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a|TAH-AN00m|C8817D|T1-821W'
+  regex: '(HW-)?(?:Huawei|MediaPad T1|Ideos|Honor[ _]?|(?:(?:AGS|AGS2|ALE|ALP|AMN|ANE|ARE|ARS|ASK|ATH|ATU|AUM|BAC|BAH[23]?|BG2|BGO|B[ZK]K|BKL|BL[ALN]|BND|BTV|CA[GMNZ]|CH[CM]|CHE[12]?|CLT|CMR|COL|COR|CPN|CRO|CRR|CUN|DIG|DLI|DRA|DUA|DUB|DUK|EDI|ELE|EML|EVA|EVR|FDR|FIG|FLA|FRD|GEM|GRA|HDN|HLK|HMA|Hol|HRY|HWI|H[36]0|INE|JAT|JDN|JDN2|JKM|JMM|JSN|KII|KIW|KNT|KOB|KSA|LDN|LEO|LIO|LLD|LND|LON|LRA|LUA|LY[AO]|MAR|MHA|MRD|MYA|NCE|NEM|NEO|NXT|PAR|PCT|PIC|PLE|PLK|POT|PRA|RIO|RNE|RVL|SCC|SCL|SCM|SEA|SHT|SLA|SNE|SPN|STF|STK|TAG|TIT|TNY|TRT|VCE|VEN|VIE|VKY|VNS|VOG|VRD|VTR|WAS|YAL|G(?:527|620S|621|630|735)|Y(?:221|330|550|6[23]5))-(?:[A-Z]{0,2}[0-9]{1,4}[A-Z]{0,3}?)|H1711|U(?:8230|8500|8661|8665|8667|8800|8818|8860|9200|9508))[);/ ])|hi6210sft|PE-(UL00|TL[12]0|TL00M)|T1-(A21[Lw]|A23L|701u|823L)|G7-(?:L01|TL00)|HW-01K|JNY-(LX[12]|AL10)|OXF-AN[01]0|TAS-(A[LN]00|L29|TL00)|WLZ-(AL10|AN00)|NIC-LX1A|MRX-(AL09|W09)|CDY-([AT]N00|AN90)|GLK-[AT]L00|JER-[AT]N10|ELS-[AT]N00|AKA-(AL10|L29)|MON-(W|AL)19|BMH-AN[12]0|AQM-([AT]L[01]0|LX1)|MOA-(AL00|LX9N)|NTS-AL00|ART-[AT]L00[xm]|JEF-[AT]N00|MED-[AT]L00|EBG-AN[01]0|ANA-[AT]N00|BZ[AK]-W00|BZT-(W09|AL[01]0)|HDL-(AL09|W09)|HWV3[123]|HW-02L|TEL-AN00a|TAH-AN00m|C8817D|T1-821W|d-01J'
   device: 'smartphone'
   models:
     - regex: 'POT-[TA]L00a[);/ ]'
@@ -5868,6 +5870,9 @@ Huawei:
     - regex: 'BZT-(W09|AL[01]0)[);/ ]'
       device: 'tablet'
       model: 'MediaPad C5 10.1'
+    - regex: 'd-01J[);/ ]'
+      device: 'tablet'
+      model: 'D Tab Compact'
 
 
       # smart watch regex
@@ -6820,7 +6825,7 @@ K-Touch:
 
 # kyocera (kyocera.co.jp, kyocera.com)
 Kyocera:
-  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[3-5]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[125]|KYV47-u)[;/) ]'
+  regex: 'Kyocera|KWC-|QC-|(?:602KC|C51[27]0|C5155|C5215|C67[35]0|C6522N?|C6530N|C6740N?|C6743|E6[89]10|KYL2[13]|KYV3[3-5]|KYY2[1-4]|S2151|KC-S701|S4-KC|KYV40U|KYV4[125]|KYV47-u|X3-KC)[;/) ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -6884,6 +6889,8 @@ Kyocera:
       model: 'Urbano V03'
     - regex: '(?:Kyocera-)?E6790'
       model: 'DuraForce XD'
+    - regex: 'X3-KC[;/) ]'
+      model: 'One X3'
 
     # explicit feature phone models
     - regex: 'S2151'
@@ -11328,7 +11335,7 @@ Spice:
 
 # Sharp
 Sharp:
-  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|402SH|[36]05SH|70[12]SH|901SH|506SH|SHL22|SHV4[023467]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
+  regex: 'SHARP|SBM|SH-?[0-9]+[a-z]?[);/ ]|AQUOS|(?:SH-M0[589]|S3-SH|SH-Z(10|01)|SH-C02|402SH|[36]05SH|70[126]SH|80[18]SH|901SH|506SH|SHL22|SHV4[023467]|SHV3[58]|FS80(?:1[08]|32|28|0[29])|TG-L900S)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11338,7 +11345,7 @@ Sharp:
       model: 'One S3'
     - regex: 'SH-M05[);/ ]'
       model: 'Aquos Sense Lite'
-    - regex: 'SH-Z10[);/ ]'
+    - regex: '(?:SH-Z10|801SH)[);/ ]'
       model: 'Aquos zero'
     - regex: 'SH-Z01[);/ ]'
       model: 'Aquos S2 (C10)'
@@ -11352,7 +11359,7 @@ Sharp:
       model: 'Aquos R'
     - regex: '701SH[);/ ]'
       model: 'Aquos R Compact'
-    - regex: '(?:SH-M09|SHV42)[);/ ]'
+    - regex: '(?:SH-M09|SHV42|706SH)[);/ ]'
       model: 'Aquos R2'
     - regex: 'SH-C02[);/ ]'
       model: 'Aquos V'
@@ -11370,7 +11377,7 @@ Sharp:
       model: 'Aquos S2'
     - regex: 'SHV46[);/ ]'
       model: 'Aquos S3 Plus'
-    - regex: 'SHV44[);/ ]'
+    - regex: '(?:SHV44|808SH)[);/ ]'
       model: 'Aquos R3'
     - regex: 'FS8032[);/ ]'
       model: 'Aquos S3'
