fix(pr) fix detect brand Fujitsu common regex

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4789,7 +4789,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJK]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ[);/ ]'
+  regex: '(?:F-01[FHJK]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'F-01F[);/ ]'
