feat(device) detect brand Realme model: X50 Pro Player (RMX2072) feat(device) detect brand OPPO model: Reno 4 Pro 5G (PDNM00) feat(device) detect brand Vivo model: iQOO 3 (V1955A) feat(device) detect brand Vivo model: Y19 (1915) feat(device) detect brand Vivo model: Z1x (1917) feat(device) detect brand Philips model: 70PUH6774/96 4K UHD

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2325,11 +2325,13 @@ VGO TEL:
 #
 # Vivo
 Vivo:
-  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A'
+  regex: '((?:VIV-|BBG-)?(?<!FBCR/)vivo(?!(?:Browser)))|V1730(D[AT]|GA)|V18(18CA|01A0|13B[AT]|18T|09[AT]|1[346][AT]|[13]8[AT]|14A|24[B]?A|2[19][AT]|3[12][AT]|36[AT])|V1731CA|V1732[AT]|V1818CT|V19[01]1[AT]|V1932[AT]|V191[346][AT]|V192[1348]A|V193[04]A|V194[15]A|V1938CT|V1955A|V1938T|V1730EA|V19[26]2A|V196[35]A|V198[16]A|V1936A[L]?|V19[59]0A|V200[125]A'
   device: 'smartphone'
   models:
     - regex: 'V1824[B]?A[);/ ]'
       model: 'iQOO'
+    - regex: 'V1955A[);/ ]'
+      model: 'iQOO 3'
     - regex: 'V1922A[);/ ]'
       model: 'iQOO Pro' # 2019
     - regex: 'V1916A[);/ ]'
@@ -2418,6 +2420,8 @@ Vivo:
       model: 'X9 Plus'
     - regex: 'vivo 1902[);/ ]'
       model: 'Y17'
+    - regex: 'vivo 1915[);/ ]'
+      model: 'Y19'
     - regex: 'V1901[AT][);/ ]'
       model: 'Y3'
     - regex: 'V1930A[);/ ]'
@@ -2474,6 +2478,8 @@ Vivo:
       model: 'Z1'
     - regex: 'V1730D[AT][);/ ]'
       model: 'Z1i'
+    - regex: 'vivo 1917[);/ ]'
+      model: 'Z1x'
     - regex: 'V1813B[AT][);/ ]'
       model: 'Z3'
     - regex: 'V1730GA[);/ ]'
@@ -9105,7 +9111,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|20[234]0|20[57]1|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|2072|20[234]0|20[57]1|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9156,10 +9162,12 @@ Realme:
       model: 'X50 5G'
     - regex: 'RMX2071[);/ ]'
       model: 'X50 Pro'
+    - regex: 'RMX2072[);/ ]'
+      model: 'X50 Pro Player'
 
 # oppo
 OPPO:
-  regex: '(?:OB-)?OPPO[ _]?([a-z0-9]+)|N1T|OPG01|(?:X90[07][0679]|U707T?|X909T?|R(?:10[01]1|2001|201[07]|6007|7005|7007|80[13579]|81[13579]|82[01379]|83[013]|800[067]|8015|810[679]|811[13]|820[057])[KLSTW]?|N520[79]|N5117|A33f|A33fw|A37fw?|PAAM00|PAAT00|PAC[TM]00)[);/ ]|R7kf|R7plusf|R7Plusm|A1601|CPH[0-9]{4}|CPH19(69|79|23|1[179])|PB(A[TM]00|CT10|BT30|CM[13]0|[FD]M00)|P(DAM10|ADM00|AF[TM]00|ADT00|AHM00|BBM[03]0|BBT00|BDT00|BFT00|[CB]E[MT]00|CA[MT]00|C[CDG]M00|CA[MT]10|CPM00|CRM00|CDT00|CD[TM]10|CHM[013]0|CKM[08]0|CLM10|DEM[13]0|DHM00|DK[TM]00|DB[TM]00|DCM00|CNM00)'
+  regex: '(?:OB-)?OPPO[ _]?([a-z0-9]+)|N1T|OPG01|(?:X90[07][0679]|U707T?|X909T?|R(?:10[01]1|2001|201[07]|6007|7005|7007|80[13579]|81[13579]|82[01379]|83[013]|800[067]|8015|810[679]|811[13]|820[057])[KLSTW]?|N520[79]|N5117|A33f|A33fw|A37fw?|PAAM00|PAAT00|PAC[TM]00)[);/ ]|R7kf|R7plusf|R7Plusm|A1601|CPH[0-9]{4}|CPH19(69|79|23|1[179])|PB(A[TM]00|CT10|BT30|CM[13]0|[FD]M00)|P(DAM10|ADM00|AF[TM]00|ADT00|AHM00|BBM[03]0|BBT00|BDT00|BFT00|[CB]E[MT]00|CA[MT]00|C[CDG]M00|CA[MT]10|CPM00|CRM00|CDT00|CD[TM]10|CHM[013]0|CKM[08]0|CLM10|DEM[13]0|DHM00|DK[TM]00|DB[TM]00|DCM00|[CD]NM00)'
   device: 'smartphone'
   models:
     - regex: 'PCHM10[);/ ]'
@@ -9342,6 +9350,8 @@ OPPO:
       model: 'Reno 3 5G'
     - regex: 'PCRM00[);/ ]'
       model: 'Reno 3 Pro'
+    - regex: 'PDNM00[);/ ]'
+      model: 'Reno 4 Pro 5G'
     - regex: 'CPH1921[);/ ]'
       model: 'Reno 5G'
     - regex: 'PCLM10[);/ ]'
@@ -9577,7 +9587,7 @@ Pentagram:
 
 # philips
 Philips:
-  regex: 'Philips|AND1E[);/ ]|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E'
+  regex: 'Philips|AND1E[);/ ]|NETTV/|PI3210G|TLE(821L|722G)|TPM1[79]1E|70PUH6774_96'
   device: 'smartphone'
   models:
     - regex: 'AND1E(?: TV)?[);/ ]'
@@ -9588,6 +9598,9 @@ Philips:
       device: 'tablet'
     - regex: '(TPM1[79]1E)' # Smart Tv 2018/2019
       model: '$1'
+      device: 'tv'
+    - regex: '(70PUH6774)_96'
+      model: '$1/96 4K UHD'
       device: 'tv'
     - regex: '(TLE821L)[);/ ]'
       model: '$1 4G LTE'
