--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -499,3 +499,123 @@
     model: Aquos R3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; vivo 1915 Build/PPR1.180610.011; en-us) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/69.0.3497.100 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 69.0.3497.100
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: VV
+    model: Y19
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; vivo 1917 Build/PKQ1.181030.001; wv) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/62.0.3202.84 Mobile Safari/537.36 VivoBrowser/6.5.1.0
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: vivo Browser
+    short_name: VV
+    version: 6.5.1.0
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: VV
+    model: Z1x
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-CN; V1955A Build/QP1A.190711.020) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/78.0.3904.108 UCBrowser/13.0.3.1083 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    short_name: UC
+    version: 13.0.3.1083
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: VV
+    model: iQOO 3
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-cn; RMX2072 Build/QKQ1.191222.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.126 MQQBrowser/10.4 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: QQ Browser
+    short_name: QQ
+    version: "10.4"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: RE
+    model: X50 Pro Player
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 10; zh-cn; PDNM00 Build/QKQ1.200216.002) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.126 MQQBrowser/10.4 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: QQ Browser
+    short_name: QQ
+    version: "10.4"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: OP
+    model: Reno 4 Pro 5G
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; 70PUH6774_96) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.136 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 79.0.3945.136
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: PH
+    model: 70PUH6774/96 4K UHD
+  os_family: Android
+  browser_family: Chrome
