feat(device) detect new brand Owwo models: 7S, 4S, 5S, 1S, Q7, Q8

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -15042,6 +15042,7 @@ Philco:
   device: 'smartphone'
   model: '$1'
 
+# SEMP TCL
 SEMP TCL:
   regex: '(?:GO3E|GO5E|5101J)[);/ ]'
   device: 'smartphone'
@@ -15060,5 +15061,11 @@ Newman:
 # Swipe
 Swipe:
   regex: '(Elite Sense)[);/ ]'
+  device: 'smartphone'
+  model: '$1'
+
+# Owwo
+Owwo:
+  regex: 'OWWO[ _]?([1457]S|Q[78])[);/ ]'
   device: 'smartphone'
   model: '$1'
