feat(device) detect new brand 360 models: N7 Pro (1809-A01), N6 Lite (1713-A01), N6 (1707-A01), N6 Pro (1801-A01), N4A (1603-A03), Q5 Plus (1509-A00), N7 (1807-A01) feat(device) detect brand AllDocube model: iPlay 20

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14474,11 +14474,15 @@ Sunvell:
   device: 'tv'
   model: 'T95Z Plus'
 
-# AllDocube
+# AllDocube (https://www.alldocube.com/)
 AllDocube:
-  regex: 'T1001XS[);/ ]'
+  regex: '(?:T1001XS|iPlay_20)[);/ ]'
   device: 'tablet'
-  model: 'M5XS'
+  models:
+    - regex: 'T1001XS[);/ ]'
+      model: 'M5XS'
+    - regex: 'iPlay_20[);/ ]'
+      model: 'iPlay 20'
 
 # Ugoos
 Ugoos:
@@ -15069,3 +15073,25 @@ Owwo:
   regex: 'OWWO[ _]?([1457]S|Q[78])[);/ ]'
   device: 'smartphone'
   model: '$1'
+
+# 360 or Qihoo 360
+'360':
+  regex: '(?:180[1379]-A01|1713-A01|1707-A01|1509-A00|1603-A03)[);/ ]'
+  device: 'smartphone'
+  models:
+    - regex: '1807-A01[);/ ]'
+      model: 'N7'
+    - regex: '1803-A01[);/ ]'
+      model: 'N7 Lite'
+    - regex: '1809-A01[);/ ]'
+      model: 'N7 Pro'
+    - regex: '1713-A01[);/ ]'
+      model: 'N6 Lite'
+    - regex: '1707-A01[);/ ]'
+      model: 'N6'
+    - regex: '1801-A01[);/ ]'
+      model: 'N6 Pro'
+    - regex: '1509-A00[);/ ]'
+      model: 'Q5 Plus'
+    - regex: '1603-A03[);/ ]'
+      model: 'N4A'
