feat(device) detect brand Huawei model: Honor 9X (HLK-AL00a) feat(device) detect brand Meizu model: 16th feat(device) detect brand Realme model: 6 Pro (RMX2063) feat(device) detect brand OPPO model: Reno 4 5G (PDPT00) feat(device) detect brand Oukitel model: U20 Plus feat(device) detect brand 360 model: N5S (607-A01)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -5490,7 +5490,7 @@ Huawei:
       model: 'Honor 9i'
     - regex: 'DUA-LX9[);/ ]'
       model: 'Honor 9S'
-    - regex: 'HLK-AL00[);/ ]'
+    - regex: 'HLK-AL00a?[);/ ]'
       model: 'Honor 9X'
     - regex: 'HLK-AL10[);/ ]'
       model: 'Honor 9X Pro'
@@ -8054,7 +8054,7 @@ MEEG:
 
 # Meizu
 Meizu:
-  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16th Plus|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
+  regex: 'Meizu|MZ-[a-z]|(M04[05]|MZ-16th(?: Plus)?|MZ-16[st]|M7[12]1C|M35[1356]|M612C|M578CA|M181[36]|M1822|M681C|M6T|MX[ -]?[2345](?: Pro)?|(?:MZ-)?m[1-6] note|M621C|M1852|M57[18]C|M3[ESX]|M031|m1 metal|M1 E|M2|M2 E|M5s Build|PRO 6|PRO 7-H)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '(?:MZ-)?M571C'
@@ -8120,6 +8120,8 @@ Meizu:
       model: '16T'
     - regex: 'MZ-16th Plus[);/ ]'
       model: '16th Plus'
+    - regex: 'MZ-16th[);/ ]'
+      model: '16th'
 
     - regex: '(?:MZ-)?Meizu[_ ]([^/;]+) Build'
       model: '$1'
@@ -9113,7 +9115,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|2072|20[234]0|20[57]1|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|9[23]|2[157]|[01379]1)|20[06]1|2027|2063|2072|20[234]0|20[57]1|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9148,7 +9150,7 @@ Realme:
       model: '6'
     - regex: 'RMX2040'
       model: '6I'
-    - regex: 'RMX2061'
+    - regex: 'RMX206[13][);/ ]'
       model: '6 Pro'
     - regex: 'RMX1925'
       model: '5S'
@@ -9169,7 +9171,7 @@ Realme:
 
 # oppo
 OPPO:
-  regex: '(?:OB-)?OPPO[ _]?([a-z0-9]+)|N1T|OPG01|(?:X90[07][0679]|U707T?|X909T?|R(?:10[01]1|2001|201[07]|6007|7005|7007|80[13579]|81[13579]|82[01379]|83[013]|800[067]|8015|810[679]|811[13]|820[057])[KLSTW]?|N520[79]|N5117|A33f|A33fw|A37fw?|PAAM00|PAAT00|PAC[TM]00)[);/ ]|R7kf|R7plusf|R7Plusm|A1601|CPH[0-9]{4}|CPH19(69|79|23|1[179])|PB(A[TM]00|CT10|BT30|CM[13]0|[FD]M00)|P(DAM10|ADM00|AF[TM]00|ADT00|AHM00|BBM[03]0|BBT00|BDT00|BFT00|[CB]E[MT]00|CA[MT]00|C[CDG]M00|CA[MT]10|CPM00|CRM00|CDT00|CD[TM]10|CHM[013]0|CKM[08]0|CLM10|DEM[13]0|DHM00|DK[TM]00|DB[TM]00|DCM00|[CD]NM00)'
+  regex: '(?:OB-)?OPPO[ _]?([a-z0-9]+)|N1T|OPG01|(?:X90[07][0679]|U707T?|X909T?|R(?:10[01]1|2001|201[07]|6007|7005|7007|80[13579]|81[13579]|82[01379]|83[013]|800[067]|8015|810[679]|811[13]|820[057])[KLSTW]?|N520[79]|N5117|A33f|A33fw|A37fw?|PAAM00|PAAT00|PAC[TM]00)[);/ ]|R7kf|R7plusf|R7Plusm|A1601|CPH[0-9]{4}|CPH19(69|79|23|1[179])|PB(A[TM]00|CT10|BT30|CM[13]0|[FD]M00)|P(DAM10|ADM00|AF[TM]00|ADT00|AHM00|BBM[03]0|BBT00|BDT00|BFT00|[CB]E[MT]00|CA[MT]00|C[CDG]M00|CA[MT]10|[CD]PM00|CRM00|CDT00|CD[TM]10|CHM[013]0|CKM[08]0|CLM10|DEM[13]0|DHM00|DK[TM]00|DPT00|DB[TM]00|DCM00|[CD]NM00)'
   device: 'smartphone'
   models:
     - regex: 'PCHM10[);/ ]'
@@ -9352,6 +9354,8 @@ OPPO:
       model: 'Reno 3 5G'
     - regex: 'PCRM00[);/ ]'
       model: 'Reno 3 Pro'
+    - regex: 'PDP[TM]00[);/ ]'
+      model: 'Reno 4 5G'
     - regex: 'PDNM00[);/ ]'
       model: 'Reno 4 Pro 5G'
     - regex: 'CPH1921[);/ ]'
@@ -9431,11 +9435,13 @@ Ouki:
 
 # Oukitel
 Oukitel:
-  regex: '(?:C15|C16|K10000)[ _]Pro'
+  regex: '(?:C15|C16|K10000)[ _]Pro|U20_Plus'
   device: 'smartphone'
   models:
     - regex: '(C15|C16|K10000)[ _]Pro'
       model: '$1 Pro'
+    - regex: 'U20_Plus'
+      model: 'U20 Plus'
 
 # Overmax
 Overmax:
@@ -15078,7 +15084,7 @@ Owwo:
 
 # 360 or Qihoo 360
 '360':
-  regex: '(?:180[1379]-A01|1713-A01|1707-A01|1509-A00|1603-A03)[);/ ]'
+  regex: '(?:180[1379]-A01|1713-A01|1707-A01|1509-A00|1603-A03|1607-A01)[);/ ]'
   device: 'smartphone'
   models:
     - regex: '1807-A01[);/ ]'
@@ -15097,3 +15103,5 @@ Owwo:
       model: 'Q5 Plus'
     - regex: '1603-A03[);/ ]'
       model: 'N4A'
+    - regex: '1607-A01[);/ ]'
+      model: 'N5S'
