feat(device) detect brand Ulefone model: Armor X6

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -12030,7 +12030,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Power_[356]|S10_Pro|(Armor(?:[ _]2)?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?) Build'
+  regex: 'Ulefone|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:2|X6))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -12051,9 +12051,11 @@ Ulefone:
       model: 'U007 Pro'
     - regex: 'U008 Pro'
       model: 'U008 Pro'
-    - regex: 'Armor[ _]2 Build'
+    - regex: 'Armor[ _]2[);\ ]'
       model: 'Armor 2'
-    - regex: 'Armor Build'
+    - regex: 'Armor[ _]X6[);\ ]'
+      model: 'Armor X6'
+    - regex: 'Armor[);\ ]'
       model: 'Armor'
     - regex: 'Power_([356])'
       model: 'Power $1'
