--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -1079,3 +1079,23 @@
     model: 6 Pro
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 9; armor_x6) applewebkit/537.36 (khtml, like gecko) chrome/83.0.4103.106 mobile safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "9"
+    platform: ARM
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 83.0.4103.106
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: UL
+    model: Armor X6
+  os_family: Android
+  browser_family: Chrome
