--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2751,6 +2751,8 @@ bq:
       model: 'Strike 2'
     - regex: 'BQ-5056|BQS-5030'
       model: 'Fresh'
+    - regex: 'BQ-6042l'
+      model: 'Magic E'
     - regex: 'BQS-5055'
       model: 'Turbo Plus'
     - regex: 'BQ(ru)?-5054'
@@ -12030,7 +12032,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:2|X6))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
+  regex: 'Ulefone|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[27]|X6))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -12053,6 +12055,8 @@ Ulefone:
       model: 'U008 Pro'
     - regex: 'Armor[ _]2[);\ ]'
       model: 'Armor 2'
+    - regex: 'Armor[ _]7[);\ ]'
+      model: 'Armor 7'
     - regex: 'Armor[ _]X6[);\ ]'
       model: 'Armor X6'
     - regex: 'Armor[);\ ]'
@@ -14655,7 +14659,7 @@ Aligator:
   regex: 'ALIGATOR[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'ALIGATOR (S50(?:65|70))[);/ ]'
+    - regex: 'ALIGATOR (S50(?:65|[67]0))[);/ ]'
       model: '$1'
 
 # Maxcom
