feat(device) detect brand BQ model: Practic (BQ-5525)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2665,7 +2665,7 @@ bq:
       model: 'Aurora'
     - regex: 'BQ(ru)?[ -]6015L'
       model: 'Universe'
-    - regex: 'BQ-6010G'
+    - regex: 'BQ-6010G|BQ(?:ru)?-5525'
       model: 'Practic'
     - regex: 'BQ-6001L|BQ-6050'
       model: 'Jumbo'
