--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -1159,3 +1159,23 @@
     model: S5060
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: mozilla/5.0 (linux; android 7.0; bqru-5525 build/nrd90m) applewebkit/537.36 (khtml, like gecko) chrome/59.0.3071.125 mobile safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    short_name: CM
+    version: 59.0.3071.125
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: BX
+    model: Practic
+  os_family: Android
+  browser_family: Chrome
