feat(device) detect brand BQ model: Armor Pro LTE+ (BQ-1022l)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2961,6 +2961,9 @@ bq:
     - regex: 'BQ(ru)?-1056L'
       model: '1056L'
       device: 'tablet'
+    - regex: 'BQ(ru)?-1022l'
+      model: 'Armor Pro LTE+'
+      device: 'tablet'
     - regex: '(?:bq )?(Aquaris[^/;]*) Build'
       model: '$1'
     - regex: 'Aquaris (E(4.5|[56])|M(5|10)|U2 Lite|U2|U (Lite|Plus)|V Plus|X5 Plus|X5|X Pro|[CMUVX])'
