feat(device) detect brand Lenovo model: K5 (K350t)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -7170,7 +7170,7 @@ Lenco:
 
 # lenovo
 Lenovo:
-  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|701LV|Z2131)[/;) ]'
+  regex: '(?:LNV-)?Lenovo|IdeaTab|IdeaPad|Thinkpad|Yoga Tablet|Tab2A[0-9]-[0-9]{2}[a-z]?|TB2-X30L|TB3-710I|YT3-X50[ML]|ZUK[ -_]|K50a40|TB-(8504F|X304F|X704V|X704A)|A2107A-H|S6000[ ;)]|(Z2 Plus|VIBE Z2|Vibe K5( Plus)?|P2A42|L18011|701LV|Z2131|K350t)[/;) ]'
   device: 'smartphone'
   models:
     - regex: 'Lenovo ?G780'
@@ -7300,15 +7300,17 @@ Lenovo:
       model: 'ZUK Z2 Pro'
     - regex: 'ZUK[ -_]([^/;]*)(?: Build|\))'
       model: 'ZUK $1'
-    - regex: 'K10a40(?: Build|\))'
+    - regex: 'K10a40[/;) ]'
       model: 'C2'
-    - regex: 'k50a40 Build'
+    - regex: 'k50a40[/;) ]'
       model: 'K3 Note'
-    - regex: 'A7010a48 Build'
+    - regex: 'A7010a48[/;) ]'
       model: 'K4 Note'
-    - regex: 'A7010a48(?: Build|\))'
+    - regex: 'A7010a48[/;) ]'
       model: 'K4 Vibe'
-    - regex: 'A7020a4[08](?: Build|\))'
+    - regex: 'K350t[/;) ]'
+      model: 'K5'
+    - regex: 'A7020a4[08][/;) ]'
       model: 'K5 Note'
     - regex: '(?:Lenovo-)?A6020(?:a40|l36)(?: Build|\))'
       model: 'K5 Vibe'
@@ -7318,19 +7320,19 @@ Lenovo:
       model: 'K5 Vibe'
     - regex: 'VIBE Z2[);/ ]'
       model: 'Vibe Z2'
-    - regex: 'k33a48(?: Build|\))'
+    - regex: 'k33a48[/;) ]'
       model: 'K6'
     - regex: 'P2A42[);/ ]'
       model: 'P2'
-    - regex: 'k53a48(?: Build|\))'
+    - regex: 'k53a48[/;) ]'
       model: 'K6 Note'
-    - regex: 'K33a42(?: Build|\))'
+    - regex: 'K33a42[/;) ]'
       model: 'K6 Power'
-    - regex: 'P1(?:ma40|a42) Build'
+    - regex: 'P1(?:ma40|a42)[/;) ]'
       model: 'P1 Vibe'
-    - regex: 'P1a42(?: Build|\))'
+    - regex: 'P1a42[/;) ]'
       model: 'P1 Pro'
-    - regex: 'P2a42(?: Build|\))'
+    - regex: 'P2a42[/;) ]'
       model: 'P2'
     - regex: 'Z90a40 Build'
       model: 'Vibe Shot'
