feat(device) detect brand Impression model: ImPad P104 feat(device) change model brand Lenovo: K5 Vibe Plus => Vibe K5 Plus feat(device) change model brand Lenovo: K5 Vibe => Vibe K5 feat(device) change model brand Lenovo: P1 Vibe (P1ma40) => Vibe P1m feat(device) change model brand Lenovo: P1 Pro (P1a42) => Vibe P1 feat(device) remove duplicate rule Lenovo;

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6522,21 +6522,21 @@ iView:
 
 # Impression
 Impression:
-  regex: '(?:Impression[ _\-]?([^/;]+)|A502|I10\-LE|ImPad[ _]?(.*)|ImSmart[ _]?(.*)) Build'
+  regex: '(?:Impression[ _\-]?([^/;]+)|A502|I10\-LE|ImPad[ _]?(.*)|ImSmart[ _]?(.*))[);/ ]'
   device: 'tablet'
   models:
     - regex: '(A502)'
       model: '$1'
       device: 'smartphone'
-    - regex: 'ImSmart[ _]?(.*) Build'
+    - regex: 'ImSmart[ _]?([^/;)]+)(?: Build|\))'
       model: 'ImSmart $1'
       device: 'smartphone'
-    - regex: 'ImPad[ _]?(.*) Build'
+    - regex: 'ImPad[ _]?([^/;)]+)(?: Build|\))'
       model: 'ImPad $1'
     - regex: '(I10\-LE)'
       model: '$1'
       device: 'smartphone'
-    - regex: 'Impression[ _\-]?([^/;]+) Build'
+    - regex: 'Impression[ _\-]?([^/;)]+)(?: Build|\))'
       model: '$1'
 
 # iTel
@@ -7306,18 +7306,14 @@ Lenovo:
       model: 'K3 Note'
     - regex: 'A7010a48[/;) ]'
       model: 'K4 Note'
-    - regex: 'A7010a48[/;) ]'
-      model: 'K4 Vibe'
     - regex: 'K350t[/;) ]'
       model: 'K5'
     - regex: 'A7020a4[08][/;) ]'
       model: 'K5 Note'
-    - regex: '(?:Lenovo-)?A6020(?:a40|l36)(?: Build|\))'
-      model: 'K5 Vibe'
-    - regex: 'A6020a46(?: Build|\))|Vibe K5 Plus'
-      model: 'K5 Vibe Plus'
-    - regex: 'Vibe K5'
-      model: 'K5 Vibe'
+    - regex: '(?:A6020a46|Vibe K5 Plus)[/;) ]'
+      model: 'Vibe K5 Plus'
+    - regex: '(?:Lenovo-)?(?:A6020(?:a40|l36)|Vibe K5)[/;) ]'
+      model: 'Vibe K5'
     - regex: 'VIBE Z2[);/ ]'
       model: 'Vibe Z2'
     - regex: 'k33a48[/;) ]'
@@ -7328,15 +7324,13 @@ Lenovo:
       model: 'K6 Note'
     - regex: 'K33a42[/;) ]'
       model: 'K6 Power'
-    - regex: 'P1(?:ma40|a42)[/;) ]'
-      model: 'P1 Vibe'
+    - regex: 'P1ma40[/;) ]'
+      model: 'Vibe P1m'
     - regex: 'P1a42[/;) ]'
-      model: 'P1 Pro'
-    - regex: 'P2a42[/;) ]'
-      model: 'P2'
-    - regex: 'Z90a40 Build'
+      model: 'Vibe P1'
+    - regex: 'Z90a40[/;) ]'
       model: 'Vibe Shot'
-    - regex: 'S1a40 Build'
+    - regex: 'S1a40[/;) ]'
       model: 'Vibe S1'
     - regex: 'Lenovo ([^/;]*) Build'
       model: '$1'
