--- a/Tests/fixtures/smartphone-7.yml
+++ b/Tests/fixtures/smartphone-7.yml
@@ -100,26 +100,6 @@
   os_family: Android
   browser_family: Chrome
 - 
-  user_agent: Mozilla/5.0 (Linux; Android 6.0; Lenovo A7010a48 Build/MRA58K) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/55.0.2883.91 Mobile Safari/537.36
-  os:
-    name: Android
-    short_name: AND
-    version: "6.0"
-    platform: ""
-  client:
-    type: browser
-    name: Chrome Mobile
-    short_name: CM
-    version: "55.0.2883.91"
-    engine: Blink
-    engine_version: ""
-  device:
-    type: smartphone
-    brand: LE
-    model: K4 Note
-  os_family: Android
-  browser_family: Chrome
-- 
   user_agent: Mozilla/5.0 (Linux; Android 6.0; Lenovo A7010a48) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.105 Mobile Safari/537.36
   os:
     name: Android
@@ -136,7 +116,7 @@
   device:
     type: smartphone
     brand: LE
-    model: K4 Vibe
+    model: K4 Note
   os_family: Android
   browser_family: Chrome
 - 
@@ -196,7 +176,7 @@
   device:
     type: smartphone
     brand: LE
-    model: K5 Vibe
+    model: Vibe K5
   os_family: Android
   browser_family: Chrome
 - 
@@ -216,7 +196,7 @@
   device:
     type: smartphone
     brand: LE
-    model: K5 Vibe
+    model: Vibe K5
   os_family: Android
   browser_family: Chrome
 - 
@@ -236,7 +216,7 @@
   device:
     type: smartphone
     brand: LE
-    model: K5 Vibe
+    model: Vibe K5
   os_family: Android
   browser_family: Chrome
 - 
@@ -256,7 +236,7 @@
   device:
     type: smartphone
     brand: LE
-    model: K5 Vibe
+    model: Vibe K5
   os_family: Android
   browser_family: Chrome
 - 
@@ -276,7 +256,7 @@
   device:
     type: smartphone
     brand: LE
-    model: K5 Vibe Plus
+    model: Vibe K5 Plus
   os_family: Android
   browser_family: Chrome
 - 
@@ -296,7 +276,7 @@
   device:
     type: smartphone
     brand: LE
-    model: K5 Vibe Plus
+    model: Vibe K5 Plus
   os_family: Android
   browser_family: Chrome
 - 
@@ -316,7 +296,7 @@
   device:
     type: smartphone
     brand: LE
-    model: K5 Vibe Plus
+    model: Vibe +K5 Plus
   os_family: Android
   browser_family: Chrome
 - 
@@ -456,7 +436,7 @@
   device:
     type: smartphone
     brand: LE
-    model: P1 Pro
+    model: Vibe P1
   os_family: Android
   browser_family: Chrome
 - 
@@ -476,7 +456,7 @@
   device:
     type: smartphone
     brand: LE
-    model: P1 Vibe
+    model: Vibe P1m
   os_family: Android
   browser_family: Chrome
 - 
@@ -496,7 +476,7 @@
   device:
     type: smartphone
     brand: LE
-    model: P1 Vibe
+    model: Vibe P1
   os_family: Android
   browser_family: Chrome
 - 
