feat(device) detect brand Samsung model: GALAXY J3 Eclipse (SM-J327V)

--- a/Tests/fixtures/smartphone-7.yml
+++ b/Tests/fixtures/smartphone-7.yml
@@ -296,7 +296,7 @@
   device:
     type: smartphone
     brand: LE
-    model: Vibe +K5 Plus
+    model: Vibe K5 Plus
   os_family: Android
   browser_family: Chrome
 - 
