--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10448,6 +10448,8 @@ Samsung:
       model: 'GALAXY J3 Orbit'
     - regex: '(?:SAMSUNG-)?SM-J327T1'
       model: 'GALAXY J3 Prime'
+    - regex: '(?:SAMSUNG-)?SM-J327V'
+      model: 'GALAXY J3 Eclipse'
     - regex: '(?:SAMSUNG-)?SM-J320(?:FN|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J330(?:F|G)'
