feat(device) detect brand IMO Mobile models: Q2 Plus, Tab X9, Feel A2, S50 Light, S89 Miracle, S88 Discovery, S99 Ocean, S98 Champion, S87 Raptor, S67 Blast, S78 Glory, Q8 Clarity, Discovery II

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -6214,11 +6214,42 @@ M4tel:
 
 # IMO Mobile
 IMO Mobile:
-  regex: 'IMO Q2'
+  regex: '(?:IMO)[);/ ]'
   device: 'smartphone'
   models:
-    - regex: 'IMO Q2'
+    - regex: 'IMO[ _]Q2 Plus[);/ ]'
+      model: 'Q2 Plus'
+    - regex: 'IMO[ _]Q2[);/ ]'
       model: 'Q2'
+    - regex: 'IMO[ _]FEEL A2[);/ ]'
+      model: 'Feel A2'
+    - regex: 'IMO[ _]S50[);/ ]'
+      model: 'S50 Light'
+    - regex: 'IMO[ _]S89[);/ ]'
+      model: 'S89 Miracle'
+    - regex: 'IMO[ _]S88[);/ ]'
+      model: 'S88 Discovery'
+    - regex: 'IMO[ _]S99[);/ ]'
+      model: 'S99 Ocean'
+    - regex: 'IMO[ _]S98[);/ ]'
+      model: 'S98 Champion'
+    - regex: 'IMO[ _]S87[);/ ]'
+      model: 'S87 Raptor'
+    - regex: 'IMO[ _]S67[);/ ]'
+      model: 'S67 Blast'
+    - regex: 'IMO[ _]S78[);/ ]'
+      model: 'S78 Glory'
+    - regex: 'IMO[ _]Q8[);/ ]'
+      model: 'Q8 Clarity'
+    - regex: 'IMO[ _]Discovery II[);/ ]'
+      model: 'Discovery II'
+
+    - regex: 'IMO[ _](Y5|Z[67])[);/ ]'
+      model: 'Tab $1'
+      device: 'tablet'
+    - regex: 'IMO TAB X9[);/ ]'
+      model: 'Tab X9'
+      device: 'tablet'
 
 # iLA
 iLA:
@@ -15100,7 +15131,7 @@ Owwo:
   device: 'smartphone'
   model: '$1'
 
-# 360 or Qihoo 360
+# 360 or names Qihoo 360, +360
 '360':
   regex: '(?:180[1379]-A01|1713-A01|1707-A01|1509-A00|1603-A03|1607-A01)[);/ ]'
   device: 'smartphone'
